# slimfit

./: .gitignore  404.html  CONTRIBUTING.rst  README.md  README.rst  dependabot.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  pin_requirements.yml  pypi_main.yml  pypi_test.yml  pytest.yml
dev/: new_numexpr_tests.py
docs/: api.md  gen_ref_pages.py  index.md  installation.md  structure.md
docs/examples/: basic_fit.py  custom_numexpr_ivp.py  gaussian_mixture_model.py  gmm_amplitudes.py  likelihood_gaussian.py  linear_lsq.ipynb  linear_matrices.py  markov_chain.py  markov_chain_and_GMM.py
docs/tutorial/: basic_usage.ipynb
examples/: custom_callables_ivp.py  custom_numexpr_ivp.py  gaussian_mixture_model.py  global_gaussian_mixture_models.py  gmm_amplitudes.py  ivp_numexpr.py  likelihood_gaussian.py  linear_lsq.py  linear_lsq_array_parameters.py  linear_lsq_bounded.py  linear_matrices.py  markov_chain_analytical.py  markov_chain_and_GMM.py  markov_ivp.py
examples/basic_fit/: index.html
examples/custom_numexpr_ivp/: index.html
examples/gaussian_mixture_model/: index.html
examples/gmm_amplitudes/: index.html
examples/likelihood_gaussian/: index.html
examples/markov_chain/: index.html
gen_ref_pages/: index.html
installation/: index.html
interactive/: interactive_ODE.py
search/: search_index.json
slimfit/: __init__.py  __version__.py  _version.py  base.py  callable.py  fit.py  fitresult.py  functions.py  loss.py  markov.py  minimizer.py  minimizers.py  models.py  np_funcs.py  numerical.py  objective.py  operations.py  parameter.py  reduce.py  symbols.py  typing.py  utils.py
structure/: index.html
tests/: test_operations.py  test_slimfit.py
(+39 files in other folders)
