[project]
name = "slimfit"
description = "SymFit's little brother"
readme = "README.md"
license = {file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
]

[project.urls]
repository = "https://github.com/Jhsmit/slimfit/"
documentation = "https://jhsmit.github.io/slimfit/"

[tool.flake8]
max-line-length = 100
ignore = "D203"
exclude = [".git", "__pycache__", "build", "dist", "docs"]
max-complexity = 10

[tool.black]
line-length = 100

[tool.poetry]
name = "slimfit"
version = "0.0.0"  # placeholder
description = "SymFit's little brother"
authors = ["Jochem Smit <jhsmit@gmail.com>"]
readme = "README.md"
license = "MIT"
exclude = ["slimfit/_version.py"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
sympy = "^1.11.1"
tqdm = "^4.64.1"
typing-extensions = "^4.4.0"
PyYAML = "^6.0"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.9"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.2"}

[tool.poetry.group.plot.dependencies]
proplot = "^0.9.5"

[tool.poetry.group.interactive.dependencies]
panel = "^0.14.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^8.5.11"
pygments = "^2.13.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
metadata = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
